ICS3U_Final_Project/doc/logfile.txt
Class documentation
<---- javadoc command: ---->
/private/var/folders/6r/1tc8r8nj3dqg8n_prswrmlpm0000gn/T/AppTranslocation/8532CDB0-EFF4-489F-88FF-B9751F316680/d/Greenfoot.app/Contents/JDK/Home/bin/javadoc
-author
-version
-nodeprecated
-protected
-Xdoclint:none
-noindex
-notree
-nohelp
-nonavbar
-source
11
-classpath
/private/var/folders/6r/1tc8r8nj3dqg8n_prswrmlpm0000gn/T/AppTranslocation/8532CDB0-EFF4-489F-88FF-B9751F316680/d/Greenfoot.app/Contents/Resources/Java/extensions/greenfoot.jar:/private/var/folders/6r/1tc8r8nj3dqg8n_prswrmlpm0000gn/T/AppTranslocation/8532CDB0-EFF4-489F-88FF-B9751F316680/d/Greenfoot.app/Contents/Resources/Java/bluejcore.jar:/private/var/folders/6r/1tc8r8nj3dqg8n_prswrmlpm0000gn/T/AppTranslocation/8532CDB0-EFF4-489F-88FF-B9751F316680/d/Greenfoot.app/Contents/Resources/Java/bluejeditor.jar:/private/var/folders/6r/1tc8r8nj3dqg8n_prswrmlpm0000gn/T/AppTranslocation/8532CDB0-EFF4-489F-88FF-B9751F316680/d/Greenfoot.app/Contents/Resources/Java/bluejext.jar:/private/var/folders/6r/1tc8r8nj3dqg8n_prswrmlpm0000gn/T/AppTranslocation/8532CDB0-EFF4-489F-88FF-B9751F316680/d/Greenfoot.app/Contents/Resources/Java/junit-4.11.jar:/private/var/folders/6r/1tc8r8nj3dqg8n_prswrmlpm0000gn/T/AppTranslocation/8532CDB0-EFF4-489F-88FF-B9751F316680/d/Greenfoot.app/Contents/Resources/Java/hamcrest-core-1.3.jar:/private/var/folders/6r/1tc8r8nj3dqg8n_prswrmlpm0000gn/T/AppTranslocation/8532CDB0-EFF4-489F-88FF-B9751F316680/d/Greenfoot.app/Contents/Resources/Java/bluej.jar:/private/var/folders/6r/1tc8r8nj3dqg8n_prswrmlpm0000gn/T/AppTranslocation/8532CDB0-EFF4-489F-88FF-B9751F316680/d/Greenfoot.app/Contents/Resources/Java/classgraph-4.2.6.jar:/private/var/folders/6r/1tc8r8nj3dqg8n_prswrmlpm0000gn/T/AppTranslocation/8532CDB0-EFF4-489F-88FF-B9751F316680/d/Greenfoot.app/Contents/Resources/Java/diffutils-1.2.1.jar:/private/var/folders/6r/1tc8r8nj3dqg8n_prswrmlpm0000gn/T/AppTranslocation/8532CDB0-EFF4-489F-88FF-B9751F316680/d/Greenfoot.app/Contents/Resources/Java/commons-logging-api-1.1.2.jar:/private/var/folders/6r/1tc8r8nj3dqg8n_prswrmlpm0000gn/T/AppTranslocation/8532CDB0-EFF4-489F-88FF-B9751F316680/d/Greenfoot.app/Contents/Resources/Java/jl1.0.1.jar:/private/var/folders/6r/1tc8r8nj3dqg8n_prswrmlpm0000gn/T/AppTranslocation/8532CDB0-EFF4-489F-88FF-B9751F316680/d/Greenfoot.app/Contents/Resources/Java/opencsv-2.3.jar:/private/var/folders/6r/1tc8r8nj3dqg8n_prswrmlpm0000gn/T/AppTranslocation/8532CDB0-EFF4-489F-88FF-B9751F316680/d/Greenfoot.app/Contents/Resources/Java/xom-1.2.9.jar:/private/var/folders/6r/1tc8r8nj3dqg8n_prswrmlpm0000gn/T/AppTranslocation/8532CDB0-EFF4-489F-88FF-B9751F316680/d/Greenfoot.app/Contents/Resources/Java/lang-stride.jar:/private/var/folders/6r/1tc8r8nj3dqg8n_prswrmlpm0000gn/T/AppTranslocation/8532CDB0-EFF4-489F-88FF-B9751F316680/d/Greenfoot.app/Contents/Resources/Java/nsmenufx-2.1.4.jar:/private/var/folders/6r/1tc8r8nj3dqg8n_prswrmlpm0000gn/T/AppTranslocation/8532CDB0-EFF4-489F-88FF-B9751F316680/d/Greenfoot.app/Contents/Resources/Java/richtextfx-fat-0.9.0.jar:/private/var/folders/6r/1tc8r8nj3dqg8n_prswrmlpm0000gn/T/AppTranslocation/8532CDB0-EFF4-489F-88FF-B9751F316680/d/Greenfoot.app/Contents/Resources/Java/guava-17.0.jar:/private/var/folders/6r/1tc8r8nj3dqg8n_prswrmlpm0000gn/T/AppTranslocation/8532CDB0-EFF4-489F-88FF-B9751F316680/d/Greenfoot.app/Contents/Resources/Java/httpclient-4.1.1.jar:/private/var/folders/6r/1tc8r8nj3dqg8n_prswrmlpm0000gn/T/AppTranslocation/8532CDB0-EFF4-489F-88FF-B9751F316680/d/Greenfoot.app/Contents/Resources/Java/httpcore-4.1.jar:/private/var/folders/6r/1tc8r8nj3dqg8n_prswrmlpm0000gn/T/AppTranslocation/8532CDB0-EFF4-489F-88FF-B9751F316680/d/Greenfoot.app/Contents/Resources/Java/httpmime-4.1.1.jar:/private/var/folders/6r/1tc8r8nj3dqg8n_prswrmlpm0000gn/T/AppTranslocation/8532CDB0-EFF4-489F-88FF-B9751F316680/d/Greenfoot.app/Contents/Resources/Java/javafx/lib/javafx.base.jar:/private/var/folders/6r/1tc8r8nj3dqg8n_prswrmlpm0000gn/T/AppTranslocation/8532CDB0-EFF4-489F-88FF-B9751F316680/d/Greenfoot.app/Contents/Resources/Java/javafx/lib/javafx.controls.jar:/private/var/folders/6r/1tc8r8nj3dqg8n_prswrmlpm0000gn/T/AppTranslocation/8532CDB0-EFF4-489F-88FF-B9751F316680/d/Greenfoot.app/Contents/Resources/Java/javafx/lib/javafx.fxml.jar:/private/var/folders/6r/1tc8r8nj3dqg8n_prswrmlpm0000gn/T/AppTranslocation/8532CDB0-EFF4-489F-88FF-B9751F316680/d/Greenfoot.app/Contents/Resources/Java/javafx/lib/javafx.graphics.jar:/private/var/folders/6r/1tc8r8nj3dqg8n_prswrmlpm0000gn/T/AppTranslocation/8532CDB0-EFF4-489F-88FF-B9751F316680/d/Greenfoot.app/Contents/Resources/Java/javafx/lib/javafx.media.jar:/private/var/folders/6r/1tc8r8nj3dqg8n_prswrmlpm0000gn/T/AppTranslocation/8532CDB0-EFF4-489F-88FF-B9751F316680/d/Greenfoot.app/Contents/Resources/Java/javafx/lib/javafx.properties.jar:/private/var/folders/6r/1tc8r8nj3dqg8n_prswrmlpm0000gn/T/AppTranslocation/8532CDB0-EFF4-489F-88FF-B9751F316680/d/Greenfoot.app/Contents/Resources/Java/javafx/lib/javafx.swing.jar:/private/var/folders/6r/1tc8r8nj3dqg8n_prswrmlpm0000gn/T/AppTranslocation/8532CDB0-EFF4-489F-88FF-B9751F316680/d/Greenfoot.app/Contents/Resources/Java/javafx/lib/javafx.web.jar:/Users/bennywu2019/Desktop/ICS3U_Final_Project
-d
/Users/bennywu2019/Desktop/ICS3U_Final_Project/doc
-encoding
UTF-8
-charset
UTF-8
/Users/bennywu2019/Desktop/ICS3U_Final_Project/MyWorld.java
<---- end of javadoc command ---->
Loading source file /Users/bennywu2019/Desktop/ICS3U_Final_Project/MyWorld.java...
Constructing Javadoc information...
/Users/bennywu2019/Desktop/ICS3U_Final_Project/MyWorld.java:15: error: cannot find symbol
    GifImage gifImage = new GifImage("images/testing11.gif");
    ^
  symbol:   class GifImage
  location: class MyWorld
warning: unknown enum constant Tag.Any
  reason: class file for threadchecker.Tag not found
warning: unknown enum constant Tag.Any
1 error
2 warnings
